# unicodeConverter

./: CMakeLists.txt  README.md  main.cpp
test/: CMakeLists.txt  test_parameters.cpp  test_text_converter.cpp
uc/: CMakeLists.txt  parameters.cpp  parameters.hpp  text_converter.cpp  text_converter.hpp  type.hpp
